Opened 15 years ago

Closed 15 years ago

Last modified 15 years ago

#5281 closed bug (fixed)

[Keyboard] doesn't remember "Delay until repeat" option

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: Preferences/Keyboard Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Open Keyboard preflet and move "Delay until repeat" slider to "Short".
Close it and reopen again, you should see that this setting is lost.
Tested with hrev35129 in VirtualBox 3.0.12.

Change History (10)

comment:1 by mmadia, 15 years ago

Version: R1/alpha1R1/Development

comment:2 by diver, 15 years ago

Dragging "Delay until key repeat" slider doesn't create ~/config/settings/Keyboard_settings. But dragging "Key repeat rate" does create it. Somehow "Delay until repeat" doesn't feel slow in VirtualBox, but it's really slow on real hardware.

comment:3 by diver, 15 years ago

It worked ok in hrev30012.

comment:4 by diver, 15 years ago

Keyboard preflet from hrev30012 is working correct in hrev35884 in the same time built-in version of Keyboard is not.

comment:5 by diver, 15 years ago

hrev33109 is ok too.

comment:6 by diver, 15 years ago

hrev34117 is ok.

comment:7 by diver, 15 years ago

hrev34140 is not ok.

comment:8 by diver, 15 years ago

There was only one change to Keyboard between those two revisions: cd trunk/src/preferences/keyboard
svn log --revision 34117:34140

r34118 | pulkomandy | 2009-11-18 23:13:56 +0300 (Wed, 18 Nov 2009) | 3 lines

Localization for keyboard and mouse preflet by mt. Thanks !
French localization by me. Please improve !

So my best guess is hrev34118.

comment:9 by stippi, 15 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev35886. I've read through the hrev34118 changeset and spotted the bug. Thanks for tracking it down!

comment:10 by diver, 15 years ago

Thanks!

Note: See TracTickets for help on using tickets.