r34118 broke setting the repeat delay in the Keyboard preflet. Thanks to diver for tracking it down! Fixes #5281.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35886 a95241bf-73f2-0310-859d-f6bbb57e9c96